--- a/Exchange/Exchange/Base.lproj/Main.storyboard
+++ b/Exchange/Exchange/Base.lproj/Main.storyboard
@@ -374,20 +374,33 @@
                                 <color key="textColor" red="0.0" green="0.6588235294117647" blue="0.77647058823529413" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bka-JL-E6i">
+                                <rect key="frame" x="20" y="469" width="560" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Wlu-Sz-zmE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.6588235294117647" blue="0.77647058823529413" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="PUx-S4-1DH" firstAttribute="top" secondItem="Dm2-BH-dEH" secondAttribute="bottom" constant="8" id="2Ia-nv-k91"/>
+                            <constraint firstItem="Bka-JL-E6i" firstAttribute="trailing" secondItem="1qz-sj-lXm" secondAttribute="trailingMargin" id="4m3-sK-Cnq"/>
                             <constraint firstItem="Dm2-BH-dEH" firstAttribute="top" secondItem="AsN-Zi-fd7" secondAttribute="bottom" constant="8" id="LHY-BX-5yC"/>
                             <constraint firstItem="llG-vq-waV" firstAttribute="centerX" secondItem="1qz-sj-lXm" secondAttribute="centerX" id="U5E-Sa-E9y"/>
                             <constraint firstItem="Dm2-BH-dEH" firstAttribute="centerX" secondItem="1qz-sj-lXm" secondAttribute="centerX" id="WSl-kt-8xd"/>
                             <constraint firstItem="8Fz-o1-VWa" firstAttribute="top" secondItem="llG-vq-waV" secondAttribute="bottom" constant="32" id="fLu-Ps-r3h"/>
+                            <constraint firstItem="llG-vq-waV" firstAttribute="top" secondItem="Bka-JL-E6i" secondAttribute="bottom" constant="8" id="mLd-ZR-vz5"/>
                             <constraint firstItem="PUx-S4-1DH" firstAttribute="leading" secondItem="1qz-sj-lXm" secondAttribute="leadingMargin" id="pWI-M7-5E4"/>
+                            <constraint firstItem="Bka-JL-E6i" firstAttribute="leading" secondItem="1qz-sj-lXm" secondAttribute="leadingMargin" id="qGM-4m-eCe"/>
                             <constraint firstItem="PUx-S4-1DH" firstAttribute="trailing" secondItem="1qz-sj-lXm" secondAttribute="trailingMargin" id="u0b-HX-IsJ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="0Ju-eU-Y6v"/>
                     <connections>
+                        <outlet property="internetLabel" destination="Bka-JL-E6i" id="Bz3-pk-jUu"/>
                         <outlet property="sarcasmLabel" destination="PUx-S4-1DH" id="tOa-Cj-ggO"/>
                         <outlet property="scanningLabel" destination="llG-vq-waV" id="VjH-2p-6cl"/>
                     </connections>
@@ -902,14 +915,26 @@
                                     <outlet property="delegate" destination="Vjt-bg-tPc" id="T1d-o0-UIc"/>
                                 </connections>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1OJ-xT-gnT">
+                                <rect key="frame" x="75" y="288" width="450" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="Fyb-ZU-Vfj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.6588235294117647" blue="0.77647058823529413" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="1OJ-xT-gnT" firstAttribute="centerX" secondItem="3Bm-gA-q8Z" secondAttribute="centerX" id="1Kh-RR-te4"/>
                             <constraint firstItem="DNa-wN-Y7b" firstAttribute="width" secondItem="KK1-zC-rg5" secondAttribute="width" id="4o0-Bc-tf5"/>
                             <constraint firstItem="DNa-wN-Y7b" firstAttribute="leading" secondItem="sON-ec-kjH" secondAttribute="trailing" id="Bwk-8p-qRs"/>
                             <constraint firstItem="sON-ec-kjH" firstAttribute="top" secondItem="3Bm-gA-q8Z" secondAttribute="topMargin" id="CiT-2Z-iG9"/>
+                            <constraint firstItem="1OJ-xT-gnT" firstAttribute="width" secondItem="3Bm-gA-q8Z" secondAttribute="width" multiplier="0.75" id="JKa-lr-haS"/>
                             <constraint firstItem="ibY-5X-GIN" firstAttribute="top" secondItem="KK1-zC-rg5" secondAttribute="bottom" id="PTV-VW-HV5"/>
                             <constraint firstItem="DNa-wN-Y7b" firstAttribute="top" secondItem="xhN-wf-6yr" secondAttribute="bottom" id="RFv-gh-9tv"/>
+                            <constraint firstItem="1OJ-xT-gnT" firstAttribute="centerY" secondItem="3Bm-gA-q8Z" secondAttribute="centerY" id="Tf3-we-8wY"/>
                             <constraint firstItem="xhN-wf-6yr" firstAttribute="leading" secondItem="3Bm-gA-q8Z" secondAttribute="leadingMargin" constant="-20" id="UFt-Fp-Y6m"/>
                             <constraint firstItem="sON-ec-kjH" firstAttribute="leading" secondItem="3Bm-gA-q8Z" secondAttribute="leadingMargin" constant="-20" id="VxM-ry-Xk6"/>
                             <constraint firstItem="KK1-zC-rg5" firstAttribute="leading" secondItem="3Bm-gA-q8Z" secondAttribute="leadingMargin" constant="10" id="fG1-3m-DHO"/>
@@ -924,6 +949,7 @@
                     <navigationItem key="navigationItem" id="baI-7F-LFB"/>
                     <connections>
                         <outlet property="filteredTableView" destination="DNa-wN-Y7b" id="ekq-2I-fKO"/>
+                        <outlet property="internetLabel" destination="1OJ-xT-gnT" id="lRr-xi-h8g"/>
                         <outlet property="searchBar" destination="xhN-wf-6yr" id="2yU-kf-e7w"/>
                         <outlet property="searchTrailing" destination="o2W-06-cej" id="c1k-PQ-ocB"/>
                         <outlet property="tableView" destination="KK1-zC-rg5" id="4gL-ye-6vi"/>
