--- a/Exchange/Exchange/Base.lproj/Main.storyboard
+++ b/Exchange/Exchange/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
@@ -851,6 +851,36 @@
                                                 <constraint firstAttribute="trailingMargin" secondItem="7LF-i3-rKR" secondAttribute="trailing" constant="-8" id="HFu-zw-gOq"/>
                                                 <constraint firstAttribute="bottomMargin" secondItem="7LF-i3-rKR" secondAttribute="bottom" constant="-8" id="UsD-Yq-ZlJ"/>
                                                 <constraint firstItem="7LF-i3-rKR" firstAttribute="leading" secondItem="Gf0-E3-4Vz" secondAttribute="leadingMargin" constant="-8" id="sLV-3l-tbZ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection id="b1e-hn-BZE">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="50" id="pfe-LI-NuW">
+                                        <rect key="frame" x="0.0" y="515" width="600" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pfe-LI-NuW" id="O9F-sg-Fkj">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="49"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CJw-FG-CFz">
+                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="49"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                                    <state key="normal" title="Privacy Policy">
+                                                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="openPolicy:" destination="Y2q-4D-b43" eventType="touchUpInside" id="f3S-eP-kS5"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="CJw-FG-CFz" secondAttribute="bottom" constant="-8" id="1Va-cK-rfz"/>
+                                                <constraint firstItem="CJw-FG-CFz" firstAttribute="top" secondItem="O9F-sg-Fkj" secondAttribute="topMargin" constant="-8" id="V1e-LU-p6y"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="CJw-FG-CFz" secondAttribute="trailing" constant="-8" id="ZA5-Ot-4AW"/>
+                                                <constraint firstItem="CJw-FG-CFz" firstAttribute="leading" secondItem="O9F-sg-Fkj" secondAttribute="leadingMargin" constant="-8" id="yNk-oC-70N"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
